# franka_robot_control

./: LICENSE  docker-compose.yml
al5d_low_level_driver/: CMakeLists.txt  Dockerfile  README.md  package.xml  ros_entrypoint.sh
al5d_low_level_driver/action/: Al5dConfiguration.action
al5d_low_level_driver/include/: ActionParser.hpp  DegreeOfFreedom.hpp  Driver.hpp  SerialBlockingReader.hpp  SerialCommunicationHandler.hpp
al5d_low_level_driver/src/: Main.cpp
al5d_low_level_driver/src/LowLevelDriver/: ActionParser.cpp  DegreeOfFreedom.cpp  Driver.cpp  SerialBlockingReader.cpp  SerialCommunicationHandler.cpp
al5d_low_level_driver/test/: AL5DLowLevelDriverTests.hpp  IntegrationTests.cpp  Main.cpp
franka_low_level_driver/: CMakeLists.txt  NOTICE  README.md  package.xml
franka_low_level_driver/include/: Driver.hpp  Joint.hpp
franka_low_level_driver/src/: Main.cpp
franka_low_level_driver/src/LowLevelDriver/: Driver.cpp
franka_low_level_driver/srv/: EmergencyStopFranka.srv
franka_low_level_driver/test/: FrankaConfigurationTest.cpp  FrankaUnitTests.cpp
franka_low_level_simulation_driver/: CMakeLists.txt  README.md  package.xml
franka_low_level_simulation_driver/action/: FrankaConfiguration.action
franka_low_level_simulation_driver/include/: ActionParser.hpp  DegreeOfFreedom.hpp  Driver.hpp  MotionGenerator.hpp  SerialBlockingReader.hpp  SerialCommunicationHandler.hpp
franka_low_level_simulation_driver/msg/: DoFConfiguration.msg
franka_low_level_simulation_driver/src/: Main.cpp
franka_low_level_simulation_driver/src/LowLevelDriver/: ActionParser.cpp  DegreeOfFreedom.cpp  Driver.cpp  Joint.cpp  MotionGenerator.cpp  SerialBlockingReader.cpp  SerialCommunicationHandler.cpp
franka_low_level_simulation_driver/srv/: UnlockFranka.srv
franka_low_level_simulation_driver/test/: FrankaConfigurationTest.cpp  Main.cpp
high_level_interface/: CMakeLists.txt  README.md  package.xml
high_level_interface/action/: Configuration.action
high_level_interface/config/: PreProgrammedFranka.ini
high_level_interface/include/: HighLevelInterface.hpp  RobotInstance.hpp  RobotInstanceAl5d.hpp  RobotInstanceFranka.hpp  RobotInstanceFrankaSimulation.hpp
high_level_interface/launch/: al5d_driver.launch  franka_combined.launch  franka_driver.launch  franka_sim_driver.launch
high_level_interface/src/: Main.cpp
high_level_interface/src/HighLevelInterface/: HighLevelInterface.cpp  RobotInstance.cpp  RobotInstanceAl5d.cpp  RobotInstanceFranka.cpp  RobotInstanceFrankaSimulation.cpp
high_level_interface/srv/: EmergencyStop.srv  Gripper.srv  Position.srv  Unlock.srv  UpdateManual.srv
high_level_interface/test/: ClientIntegrationTest.cpp  ClientScript.py  ClientSimulationDemo.cpp
msg/: DoFConfiguration.msg
